@@ -3,6 +3,8 @@
 			page and view levels.
 	* GUI (load_project): Fixed a crash when the project folder is not a valid
 			Oriflamms project.
+	* GUI (load_project, stats), EntityDialog (dialogAddFile): 
+			Fixed path encoding on Windows.
 
 2016-02-01 Yann LEYDIER <yann@leydier.info>
 	* View (ComputeFrontier): Now returns a straight line if no path is found.
